--- a/src/styles/adminCustomer/_barCustomerChoice.scss
+++ b/src/styles/adminCustomer/_barCustomerChoice.scss
@@ -6,16 +6,25 @@
   width: 100%;
   margin-right: 10px;
 
+  @media screen and (max-width: 800px) {
+    margin-top: 100px;
+  }
+
   .navbar-customer {
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 80%;
     margin-top: 20px;
     border-radius: 20px;
     border: 1px solid rgb(87, 194, 243);
     justify-content: center;
     align-items: center;
     background-color: white;
+
+    @media screen and (max-width: 600px) {
+      width: 100%;
+      border-radius: 5px;
+    }
 
     p {
       font-size: 22px;
@@ -25,11 +34,19 @@
       cursor: pointer;
       padding: 0 1%;
 
+      @media screen and (max-width: 650px) {
+        margin: 2% 2% 2% 2%;
+      }
+
       &:hover {
         color: rgb(77, 165, 206);
-
         border-left: 2px solid rgb(87, 194, 243);
         border-right: 2px solid rgb(87, 194, 243);
+
+        @media screen and (max-width: 650px) {
+          border-left: none;
+          border-right: none;
+        }
       }
     }
 
@@ -37,8 +54,20 @@
       display: flex;
       flex-direction: row;
       width: 100%;
-
       justify-content: center;
+
+      p {
+        @media screen and (max-width: 1100px) {
+          font-size: 20px;
+        }
+
+        @media screen and (max-width: 900px) {
+          font-size: 14px;
+        }
+        @media screen and (max-width: 600px) {
+          font-size: 12px;
+        }
+      }
     }
   }
 
@@ -50,8 +79,8 @@
     text-align: center;
 
     img {
-      width: 10%;
-      margin: 4% 0;
+      width: 30%;
+      margin: 10% 0;
     }
 
     span {
@@ -63,18 +92,22 @@
       width: 100%;
       align-items: center;
       justify-content: center;
+      margin-top: 24px;
 
       .setup {
-        width: 16%;
+        width: 30%;
+        margin-bottom: 5%;
       }
     }
   }
 
   .contact-details-box {
     display: flex;
-    width: 90%;
+    width: 100%;
     align-items: center;
     justify-content: center;
+
+    
   }
 
   .ordered-details-box {
@@ -83,8 +116,57 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 62vh;
-    overflow-y: scroll;
-    margin-top: 20px;
+    min-height: 60vh;
+    margin-bottom:0 0 30px 0;
+    @media screen and (max-width: 1050px) {
+      min-height: 63.5vh;
+     
+    }
+    @media screen and (max-width: 450px) {
+      min-height: 44vh ;
+     }
+
+    
+    .no-order-box{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      min-height: 58.6vh;
+
+      @media screen and (max-width: 1050px) {
+        min-height: 63.5vh;
+       
+      }
+      @media screen and (max-width: 800px) {
+        min-height: 49vh;
+      }
+      @media screen and (max-width: 450px) {
+       min-height: 44vh ;
+      }
+
+      @media screen and (max-width: 390px) {
+        min-height: 35vh ;
+       }
+    .no-order-txt{
+      font-size: 30px;
+      margin: 30px;
+      text-align: center;
+      background-color: $color-1;
+      padding: 10px;
+      color: white;
+      font-weight: 600;
+      border-radius: 15px;
+      width: 70%;
+
+      @media screen and (max-width: 800px) {
+       font-size: 16px;
+      }
+      @media screen and (max-width: 600px) {
+        font-size: 16px;
+       }
+    }
+  }
+    
   }
 }
