--- a/src/styles/adminCustomer/_orderedList.scss
+++ b/src/styles/adminCustomer/_orderedList.scss
@@ -1,44 +1,79 @@
-.ordered-list_container{
+.ordered-list_container {
   display: flex;
   flex-direction: column;
-  width: 60%;
-  margin: 30px 0 30px 30px;
-  background-color: rgb(253, 249, 208);
+  width: 80%;
+  margin: 30px 0;
+  background-color: rgb(64, 184, 231);
   padding: 10px;
   border-radius: 20px;
 
-  .order-detail-box{
+  @media screen and (max-width: 600px) {
+    width: 100%;
+    border-radius: 0;
+    padding: 10px 6px 6px 6px;
+    margin: 15px 0;
+  }
+  .no-order{
+    font-weight: 20px;
+  }
+  .order-detail-box {
     display: flex;
     width: 100%;
     margin-left: 2px;
     align-items: center;
     justify-content: center;
-  
-    .order-box{
+
+    @media screen and (max-width: 800px) {
+      margin-left: 0;
+    }
+
+    .order-box {
       display: flex;
       width: 100%;
       flex-direction: column;
-    
-      p{
+
+      p {
         margin: 6px;
-        
+        @media screen and (max-width: 800px) {
+          font-size: 14px;
+        }
+        @media screen and (max-width: 600px) {
+          margin: 6px 0 6px 0;
+          font-size: 12px;
+          text-align: center;
+        }
       }
-    
+
       .order-title {
         font-weight: 600;
         font-size: 18px;
+
+        @media screen and (max-width: 800px) {
+          font-size: 16px;
+        }
+        @media screen and (max-width: 600px) {
+          font-size: 14px;
+        }
       }
     }
+
+    
   }
 
-  .btn-detail-order{
+  
+  .btn-detail-order {
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     margin-top: 20px;
-  
-    .btn-detail, .btn-bill {
+
+    @media screen and (max-width: 600px) {
+      margin-top: 10px;
+    }
+
+    .btn-detail,
+    .btn-bill {
       margin: 8px;
       padding: 1% 4%;
       border-radius: 10px;
@@ -46,19 +81,6 @@
       color: white;
     }
   }
+
   
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
