--- a/src/styles/basket/_basket.scss
+++ b/src/styles/basket/_basket.scss
@@ -122,6 +122,10 @@
     align-items: center;
     margin: 30px 0;
 
+    .btn-back-next {
+      @include btnNextBack;
+    }
+
     h5 {
       text-align: center;
       color: white;
@@ -135,9 +139,6 @@
       display: flex;
       width: 100%;
     }
-    .btn-back-next {
-      @include btnNextBack;
-    }
   }
 }
 
@@ -148,6 +149,11 @@
 
 //basketCard//
 
+.recap-delete {
+  background-color: rgba(185, 73, 73, 0.548);
+  border-radius: 5px;
+}
+
 .recap-basket-box {
   display: flex;
   width: 100%;
@@ -155,6 +161,7 @@
   justify-content: space-between;
   align-self: center;
   margin: 20px 0;
+  padding: 5px;
 
   @media screen and (max-width: 600px) {
     margin: 10px 0;
@@ -174,7 +181,6 @@
       width: 30%;
 
       @media screen and (max-width: 600px) {
-        
       }
     }
   }
@@ -186,6 +192,7 @@
       width: 100%;
       margin: 0;
       font-size: 14px;
+      text-align: center;
 
       @media screen and (max-width: 600px) {
         font-size: 10px;
@@ -226,33 +233,42 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    top: 68%;
+    top: 44%;
     left: 50%;
     transform: translate(-50%, -50%);
     border: 1px solid black;
+    border-radius: 10px;
     background-color: white;
     @include shadowbox;
-    padding: 20px;
+    padding: 10px;
 
     p {
-      font-size: 20px;
+      font-size: 12px;
+      margin-bottom: 0;
     }
 
     .delete-box {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-top: 10px;
-
+      margin-top: 6px;
+      font-size: 18px;
+     
       button {
         padding: 6px;
         border-radius: 10px;
         width: 20%;
+        font-size: 12px;
+        @media screen and (max-width: 600px) {
+          font-size: 10px;
+          width: 25%;
+        }
       }
 
       .btn-delete {
         background-color: red;
         color: white;
+        text-align: center;
 
         &:hover {
           background-color: rgb(185, 59, 59);
@@ -262,6 +278,7 @@
       .btn-cancel {
         background-color: $color-1;
         color: white;
+        text-align: center;
 
         &:hover {
           background-color: white;
