--- a/src/styles/connection/_connectionPage.scss
+++ b/src/styles/connection/_connectionPage.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
 
   @media screen and (max-width: 800px) {
-   margin-top: 100px;
-       }
+    margin-top: 100px;
+  }
 
   .logo-connection {
     display: flex;
@@ -38,7 +38,7 @@
 
     @media screen and (max-width: 800px) {
       box-shadow: none;
-         }
+    }
 
     form {
       display: flex;
@@ -86,13 +86,15 @@
   }
 }
 
-.error-box{
+.error-box {
   margin-top: 10px;
-  height: 40px ;
+  height: 40px;
   width: 100%;
-.error {
-  color: red;
-  font-size: 12px;
-  margin-top: 10px;
-}
+  text-align: center;
+  .error {
+    color: red;
+    font-size: 12px;
+    margin-top: 10px;
+    line-height: 0.6;
+  }
 }
