--- a/src/styles/footer/_footer.scss
+++ b/src/styles/footer/_footer.scss
@@ -7,26 +7,22 @@
   justify-content: space-between;
 
   @media screen and (max-width: 950px) {
-   height: 17vh ;
-    
-      }
+    height: 17vh;
+  }
 
   @media screen and (max-width: 800px) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: fit-content;
-    
-      }
-    
+  }
 
   .logo-container {
     margin-left: 36px;
 
     @media screen and (max-width: 800px) {
-     margin: 8px 0;
-        }
-      
+      margin: 8px 0;
+    }
 
     img {
       width: 120px;
@@ -49,13 +45,12 @@
       justify-content: center;
       align-items: center;
       height: fit-content;
-      
-        }
-      
+    }
 
     img {
       width: 40px;
       margin-right: 16px;
+      cursor: pointer;
     }
   }
 }
