--- a/src/styles/form/_form.scss
+++ b/src/styles/form/_form.scss
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  
 
   h1 {
     @include title;
@@ -15,23 +14,31 @@
     margin: 10px 0 20px 0;
   }
 
+  @media screen and (max-width: 800px) {
+    margin-top: 120px;
+  }
+
   #info-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    min-width: 800px;
-    max-width: 1000px;
-    font-family:  $font2;
+    width: 80% !important;
+    font-family: $font2;
+
+    @media screen and (max-width: 900px) {
+      width: 100%;
+    }
 
     .contact-adresse-box {
       display: flex;
+      align-items: center;
+      justify-content: center;
       width: 100%;
       margin: 6px 0;
 
       .form-contact {
-        width: 100%;
+        width: 80%;
         margin: 20px 0;
         justify-content: center;
         align-items: center;
@@ -40,12 +47,32 @@
         @include shadowbox;
         padding: 30px;
 
+        @media screen and (max-width: 1000px) {
+          width: 80%;
+          box-shadow: none;
+          padding: 0;
+        }
+
+        @media screen and (max-width: 600px) {
+          width: 100%;
+        }
+
         .form-input {
           display: flex;
           margin: 20px 0 20px 0;
           justify-content: center;
           align-items: center;
           width: 90%;
+
+          @media screen and (max-width: 800px) {
+            width: 70%;
+            margin: 10px 0;
+          }
+          @media screen and (max-width: 600px) {
+            margin: 10px 0;
+            width: 80%;
+            flex-direction: column;
+          }
 
           input {
             border: none;
@@ -59,6 +86,10 @@
               color: $color-1;
               font-weight: 600;
             }
+
+            @media screen and (max-width: 800px) {
+              font-size: 16px;
+            }
           }
 
           .label-input {
@@ -71,6 +102,10 @@
             label {
               font-size: 18px;
               font-weight: bold;
+
+              @media screen and (max-width: 800px) {
+                font-size: 16px;
+              }
             }
 
             .lastname-error-span,
@@ -97,23 +132,42 @@
       align-items: center;
       margin: 30px 0;
 
+      @media screen and (max-width: 800px) {
+        width: 60%;
+      }
+
+      @media screen and (max-width: 600px) {
+        width: 100%;
+      }
+
+      .btn-back-next {
+        @include btnNextBack;
+
+        @media screen and (max-width: 1200px) {
+          padding: 10px 30px;
+
+          font-size: 16px;
+        }
+
+        @media screen and (max-width: 1000px) {
+          padding: 10px 20px;
+          margin-top: 20px;
+          font-size: 14px;
+        }
+
+        @media screen and (max-width: 800px) {
+          padding: 10px 10px;
+          margin-top: 20px;
+          font-size: 12px;
+        }
+        @media screen and (max-width: 600px) {
+          margin: 10px;
+        }
+      }
+
       Link {
         display: flex;
         width: 100%;
-      }
-      button {
-        padding: 10px 40px;
-        border-radius: 15px;
-        cursor: pointer;
-        background-color: $color-1;
-        color: white;
-        font-weight: 600;
-        font-size: 20px;
-
-        &:hover {
-          background-color: white;
-          color: $color-1;
-        }
       }
     }
   }
