--- a/src/styles/header/_basketHeader.scss
+++ b/src/styles/header/_basketHeader.scss
@@ -5,14 +5,6 @@
   flex-direction: column;
   width: 140px;
 
-  .basket-header-container-responsive{
-    display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 140px;
-  
-
   .basket-box {
     display: flex;
     align-items: center;
@@ -28,9 +20,7 @@
       width: 40%;
       @media screen and (max-width: 800px) {
         width: 30%;
-      
-        
-        }
+      }
 
       .icon-basket {
         width: 40px;
@@ -38,11 +28,7 @@
         margin: 0;
         @media screen and (max-width: 800px) {
           width: 60%;
-        
-          
-          }
-
-        
+        }
       }
     }
 
@@ -51,7 +37,7 @@
       height: 28px;
       border-radius: 23px;
       background: red;
-      top: 20px;
+      top: 30px;
       right: 210px;
       position: absolute;
       display: flex;
@@ -62,13 +48,11 @@
       font-weight: 600;
 
       @media screen and (max-width: 800px) {
-        top: 72px;
+        top: 68px;
         width: 18px;
-      height: 18px;
-      left: 70px;
-      
-        
-        }
+        height: 18px;
+        left: 70px;
+      }
 
       .number-article-basket {
         font-size: 16px;
@@ -76,9 +60,8 @@
         margin: 0;
 
         @media screen and (max-width: 800px) {
-         font-size: 12px;
-          
-          }
+          font-size: 12px;
+        }
       }
     }
 
@@ -91,6 +74,12 @@
       transform: rotate(45deg);
       position: absolute;
       top: 90px;
+      @media screen and (max-width: 800px) {
+        top: 108px;
+      }
+      @media screen and (max-width: 600px) {
+        border-top: 40px solid $color-1;
+      }
     }
 
     .basket-list {
@@ -103,9 +92,22 @@
       padding: 30px 10px;
       box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
         rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-      top: 96px;
+      top: 103px;
       position: absolute;
       z-index: 2;
+
+      @media screen and (max-width: 800px) {
+        top: 104px;
+        left: 2px;
+      }
+
+      @media screen and (max-width: 600px) {
+        width: 100%;
+        left: 0;
+        padding: 10px 10px;
+        border: 2px solid $color-1;
+        top: 105px;
+      }
 
       .basket-empty-box {
         display: flex;
@@ -125,6 +127,11 @@
         border-top: 2px solid $color-1;
         width: 90%;
         margin: 20px 0;
+
+        @media screen and (max-width: 600px) {
+          width: 100%;
+          margin: 10px 0;
+        }
       }
 
       .total-price-list {
@@ -134,10 +141,15 @@
         width: 100%;
         margin: 10px;
 
+        @media screen and (max-width: 600px) {
+          margin: 5px;
+        }
+
         .total-title-basket-header {
           font-size: 14px;
           font-weight: bold;
           color: $color-1;
+          margin-left: 10px;
         }
 
         .total-price-basket-header {
@@ -153,6 +165,10 @@
         width: 100%;
         margin-top: 30px;
 
+        @media screen and (max-width: 600px) {
+          margin-top: 4px;
+        }
+
         .btn-order {
           padding: 2% 4%;
           border-radius: 15px;
@@ -164,9 +180,24 @@
             background-color: white;
             color: $color-1;
           }
+
+          @media screen and (max-width: 600px) {
+            padding: 1% 2%;
+            font-size: 12px;
+          }
+        }
+      }
+      .closeModal-box {
+        width: 100%;
+        display: flex;
+        justify-content: end;
+        .closeModal {
+          border: none;
+          cursor: pointer;
+          color: $color-1;
+          font-weight: 600;
         }
       }
     }
   }
-}
 }
