--- a/src/styles/homePage/_homePage.scss
+++ b/src/styles/homePage/_homePage.scss
@@ -5,21 +5,25 @@
   flex-direction: column;
   margin: 38px 0;
   text-align: center;
+  width: 100%;
 
+@media screen and (max-width: 1100px) {
+    m1n-height: 300vh;
+  }
   @media screen and (max-width: 800px) {
-   margin: 120px 0 30px 0;
-}
+    margin: 120px 0 30px 0;
+  }
 
   img {
     width: 150px;
   }
 
-  h1{
+  h1 {
     @media screen and (max-width: 800px) {
       width: 80%;
       margin-bottom: 10px;
+    }
   }
-}
 
   .text-container {
     width: 80%;
@@ -33,8 +37,7 @@
 
     @media screen and (max-width: 800px) {
       margin-bottom: 10px;
-        }
-
+    }
   }
 
   .shopping-box {
@@ -44,13 +47,13 @@
     justify-content: center;
     width: 80%;
     padding: 24% 20%;
+    
     @media screen and (max-width: 800px) {
       width: 100%;
       box-shadow: none;
       padding: 20% 10%;
       margin-bottom: 30px;
-     
-        }
+    }
 
     .btn-shopping {
       width: 400px;
@@ -65,8 +68,7 @@
         width: 100%;
         font-size: 90%;
         padding: 4% 6%;
-          }
-        
+      }
 
       &:hover {
         background-color: white;
