--- a/src/styles/productCard/_productCard.scss
+++ b/src/styles/productCard/_productCard.scss
@@ -195,7 +195,7 @@
         width: 100%;
         border: 1px solid $color-1;
         padding: 5px;
-        font-family: "montserrat";
+        font-family: $font2;
       }
 
       .orders-basket-box {
