--- a/src/styles/adminCustomer/_contactDetails.scss
+++ b/src/styles/adminCustomer/_contactDetails.scss
@@ -16,9 +16,16 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     height: 80%;
 
+    @media screen and (max-width: 1100px) {
+      box-shadow: none;
+      margin: 0;
+      min-height: 55vh;
+    }
+
     @media screen and (max-width: 800px) {
       box-shadow: none;
       margin: 0;
+      height: fit-content;
     }
 
     h1 {
@@ -57,6 +64,10 @@
         p {
           font-size: 3vh;
           margin: 8px 8px 2px 4px;
+
+          @media screen and (max-width: 1100px) {
+            font-size: 2vh;
+          }
         }
 
         .name-delivery-detail,
