--- a/src/styles/homePage/_homePage.scss
+++ b/src/styles/homePage/_homePage.scss
@@ -6,9 +6,11 @@
   margin: 38px 0;
   text-align: center;
   width: 100%;
+  height: fit-content;
 
 @media screen and (max-width: 1100px) {
-    m1n-height: 300vh;
+  
+    min-height: 66.5vh;
   }
   @media screen and (max-width: 800px) {
     margin: 120px 0 30px 0;
@@ -26,7 +28,7 @@
   }
 
   .text-container {
-    width: 80%;
+    width: 50%;
     height: 60px;
     display: flex;
     align-items: center;
@@ -38,6 +40,11 @@
     @media screen and (max-width: 800px) {
       margin-bottom: 10px;
     }
+    @media screen and (max-width: 600px) {
+      width: 80%;
+    }
+    
+
   }
 
   .shopping-box {
@@ -45,10 +52,10 @@
     @include shadowbox;
     align-items: center;
     justify-content: center;
-    width: 80%;
-    padding: 24% 20%;
+    width: 50%;
+    padding: 14% 10%;
     
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 1000px) {
       width: 100%;
       box-shadow: none;
       padding: 20% 10%;
